--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nunito&display=swap");
 
 * {
   margin: 0;
@@ -7,12 +7,14 @@
 }
 
 html {
+  width: 100%;
   font-size: 62.5%;
   box-sizing: border-box;
 }
 
 body {
-  font-family: 'Nunito', sans-serif;
+  /* width: 100%; */
+  font-family: "Nunito", sans-serif;
   font-weight: 400;
   height: 100vh;
   color: #333;
@@ -25,6 +27,7 @@ body {
 /* LAYOUT */
 main {
   position: relative;
+
   width: 100rem;
   height: 60rem;
   background-color: rgba(255, 255, 255, 0.35);
@@ -34,6 +37,7 @@ main {
   border-radius: 9px;
   overflow: hidden;
   display: flex;
+  justify-content: center;
 }
 
 .player {
@@ -173,3 +177,87 @@ main {
 .hidden {
   display: none;
 }
+
+@media (max-width: 750px) {
+  body {
+    width: 100%;
+  }
+
+  .btn {
+    font-size: small;
+  }
+
+  .name,
+  .score {
+    font-size: x-large;
+    font-size: 300;
+  }
+
+  .current {
+    width: 100%;
+  }
+}
+
+@media (max-width: 600px) {
+  body {
+    width: 100%;
+    padding-left: 1%;
+    padding-right: 1%;
+  }
+
+  .btn {
+    font-size: x-small;
+  }
+
+  .name,
+  .score {
+    font-size: medium;
+    font-weight: 300;
+  }
+}
+
+@media (max-width: 440px) {
+  main {
+    height: 90vh;
+    width: 90%;
+  }
+
+  .btn {
+    font-size: xx-small;
+  }
+
+  .name,
+  .score {
+    font-size: smaller;
+    font-weight: 300;
+
+    padding-left: 10%;
+    padding-right: 10%;
+  }
+
+  .current-label,
+  .current-score {
+    font-size: smaller;
+  }
+}
+
+
+
+@media only screen and (max-width: 920px) and (min-width: 600px) {
+  main {
+    height: 60vh;
+    width: 90%;
+  }
+}
+
+/* @media (max-width: 920px) {
+  main {
+    height: 60vh;
+    width: 90%;
+
+  }
+
+
+
+
+} */
