--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@ main {
   border-radius: 5px;
   box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
   z-index: 10;
-  font-size: medium;
+  font-size: small;
 }
 
 
@@ -247,6 +247,11 @@ main {
     font-size: medium;
     font-weight: 300;
   }
+
+  .modal {
+    font-size: smaller;
+  }
+
 }
 
 @media (max-width: 440px) {
@@ -271,5 +276,9 @@ main {
   .current-label,
   .current-score {
     font-size: smaller;
+  }
+
+  .modal {
+    font-size: x-small;
   }
 }
