--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
   font-weight: 400;
   height: 100vh;
   color: #333;
-  background-image: linear-gradient(to top left, #753682 0%, #bf2e34 100%);
+  background-image: linear-gradient(to top left, #ff9d57 0%, #9c4404 100%);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -62,7 +62,7 @@ main {
 .score {
   font-size: 8rem;
   font-weight: 300;
-  color: #c7365f;
+  color: #282828;
   margin-bottom: auto;
 }
 
@@ -83,10 +83,9 @@ main {
 }
 
 .current {
-  background-color: #c7365f;
+  background-color: #ff9d57;
   opacity: 0.8;
   border-radius: 9px;
-  color: #fff;
   width: 65%;
   padding: 2rem;
   text-align: center;
@@ -97,7 +96,7 @@ main {
   text-transform: uppercase;
   margin-bottom: 1rem;
   font-size: 1.7rem;
-  color: #ddd;
+
 }
 
 .current-score {
@@ -118,19 +117,14 @@ main {
   cursor: pointer;
   font-weight: 400;
   transition: all 0.2s;
-  background-color: white;
-  background-color: rgba(255, 255, 255, 0.6);
+  background-color: #fcc395;
+  /* background-color: rgba(255, 255, 255, 0.6); */
   backdrop-filter: blur(10px);
   padding: 0.7rem 2.5rem;
   border-radius: 50rem;
   box-shadow: 0 1.75rem 3.5rem rgba(0, 0, 0, 0.1);
 }
 
-/* .btn::first-letter {
-  font-size: 2.4rem;
-  display: inline-block;
-  margin-right: 0.7rem;
-} */
 
 .btn--new {
   top: 4rem;
@@ -147,6 +141,7 @@ main {
 .btn:active {
   transform: translate(-50%, 3px);
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
+
 }
 
 .btn:focus {
@@ -168,7 +163,7 @@ main {
 
 .player--winner .name {
   font-weight: 700;
-  color: #c7365f;
+
 }
 
 .hidden {
@@ -200,7 +195,7 @@ main {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 70%;
-  color: #c7365f;
+  color: #9c4404;
   background-color: #ddd;
   padding: 6rem;
   border-radius: 5px;
